fix collapse-list-card

--- a/blocks/collapse-list-card/src/style.scss
+++ b/blocks/collapse-list-card/src/style.scss
@@ -7,6 +7,8 @@
 .wp-block-create-block-ufr-collapse-list-card {
 	.heading {
 		cursor: pointer;
+		text-wrap: none;
+		flex-wrap: nowrap;
 
 		.title {
 			font-size: 130%;
